--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+/* @import "tailwindcss/preflight";
+@tailwind components;
+@tailwind utilities; */
 
 :root {
   --background: #ffffff;
@@ -20,7 +23,13 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+  box-sizing: border-box;
 }
